--- a/q9/q9/css/style.css
+++ b/q9/q9/css/style.css
@@ -1,4 +1,200 @@
 @charset "UTF-8";
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1
+  }
+
+  100% {
+    opacity: 0
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.container {
+  width: 200px;
+  height: 200px;
+  background: #76ff826b;
+  margin: 0 auto;
+  animation: fadeIn 4s ease 0s 1 normal;
+}
+
+.container2 {
+  width: 200px;
+  height: 200px;
+  background: #76ff826b;
+  margin: 0 auto;
+  animation: fadeOut 4s ease 4s 1 normal;
+}
+
+.container3 {
+  width: 200px;
+  height: 200px;
+  background: #76ff826b;
+  margin: 0 auto;
+  animation: spin 4s linear infinite;
+}
+
+.container4 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container4:hover {
+  background: #ff27e2c9;
+}
+
+.container5 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container5:hover {
+  transform: rotate(360deg);
+}
+
+.container6 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container6:hover {
+  transform: translate(0, -20%);
+}
+
+.container7 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container7:hover {
+  transform: translate(50%, 0);
+}
+
+.container8 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container8:hover {
+  height: 300px;
+}
+
+.container9 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container9:hover {
+  width: 500px;
+}
+
+.container10 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container10:hover {
+  border: 10px #00ffe5 solid;
+  box-sizing: border-box;
+}
+
+.container11 {
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+
+.container11:hover {
+  box-shadow: 8px 11px 10px 3px #06031ed0;
+}
+
+.circle {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  border: solid 10px #ecf1f2;
+  border-top: solid 10px #14ff4bcd;
+  animation: spin 1.1s linear infinite;
+}
+
+.card--list {
+  display: flex;
+}
+
+.card--item {
+  width: 300px;
+  padding: 20px;
+  background: #ffffff;
+  border: 1px solid #000000;
+  border-left: 0;
+  transition: .5s;
+}
+
+.card--item>p {
+  margin-top: 20px;
+}
+
+.card--item:first-child {
+  border-left: 1px solid #000000;
+  ;
+}
+
+.card--item:hover {
+  box-shadow: 0px 0px 10px 3px #424242d0;
+  z-index: 1;
+}
+
+.icon {
+  background: url(https://picsum.photos/id/1005/200/300) no-repeat center/cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
 /* カード内の画像は以下のURLを使用して下さい */
 /* https://picsum.photos/id/1005/200/300 */
