--- a/q10/q10/css/style.css
+++ b/q10/q10/css/style.css
@@ -1,1 +1,111 @@
 @charset "UTF-8";
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  padding: 0 15px;
+  line-height: 50px;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  margin-left: 30px;
+  border-radius: 10px;
+}
+
+.button:first-child {
+  margin-left: 0;
+}
+
+.red {
+  color: #fff;
+  background: #fd0f0fd9;
+}
+
+.blue {
+  color: #fff;
+  background: #170ffdd9;
+}
+
+.green {
+  color: #000;
+  background: #0ffd0fd9;
+}
+
+.red1 {
+  color: #fff;
+  background: #fd0f0fd9;
+  box-shadow: 0 5px 0 rgba(63, 5, 5, 0.851), 0 5px 1px rgba(63, 5, 5, 0.851);
+}
+
+.blue2 {
+  color: #fff;
+  background: #170ffdd9;
+  box-shadow: 0 5px 0 rgba(5, 13, 63, 0.851), 0 5px 1px rgba(5, 13, 63, 0.851);
+}
+
+.green3 {
+  color: #000;
+  background: #0ffd0fd9;
+  box-shadow: 0 5px 0 rgba(5, 63, 5, 0.851), 0 5px 1px rgba(5, 63, 5, 0.851);
+}
+
+.red4 {
+  color: #fff;
+  background: #fd0f0fd9;
+  box-shadow: 0 5px 0 rgba(63, 5, 5, 0.851), 0 5px 1px rgba(63, 5, 5, 0.851);
+}
+
+.blue5 {
+  color: #fff;
+  background: #170ffdd9;
+  box-shadow: 0 5px 0 rgba(5, 13, 63, 0.851), 0 5px 1px rgba(5, 13, 63, 0.851);
+}
+
+.green6 {
+  color: #000;
+  background: #0ffd0fd9;
+  box-shadow: 0 5px 0 rgba(5, 63, 5, 0.851), 0 5px 1px rgba(5, 63, 5, 0.851);
+}
+
+.red4:active,
+.blue5:active,
+.green6:active {
+  transform: translateY(4px);
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: none;
+}
+
+.button-1 {
+  color: #67c5ff;
+  border: 4px double #67c5ff;
+  transition: .5s;
+}
+
+.button-1:hover {
+  background: #fffbef;
+}
+
+.button-2 {
+  color: #67c5ff;
+  border: 4px dotted #75caff;
+  transition: .5s;
+}
+
+.button-2:hover {
+  border-style: dashed;
+}
+
+.button-3 {
+  color: #0079a5f8;
+  background: #d0edfff8;
+  border: 4px dashed #67c5ff;
+  transition: .5s;
+}
+
+.button-3:hover {
+  color: #67c5ff;
+  background: #ffffff;
+}
